# mcp-alchemy

./: Dockerfile  Makefile  README.md  USAGE.MD  USAGE.md  mcp_alchemy_with_vertica-2025.5.2.210242-py3-none-any.whl  pyproject.toml  requirements.txt
.cursor/rules/: 00-build-version.mdc
.github/workflows/: docker-build.yml
mcp_alchemy/: database_context.py  mcp_args.py  mcp_tools.py  request_context.py  response_formatter.py  server.py
mcp_alchemy_with_vertica/: server.py
scripts/linux/: download_wheel.sh
scripts/windows/: download_wheel.ps1
tests/: test.py
